src/test/ui/parser/do-not-suggest-semicolon-before-array.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:10
   |
LL |     [1, 3)
   |     -    ^ mismatched closing delimiter
   |     |
   |     unmatched opening delimiter begins here

error: expected one of `.`, `?`, `]`, or an operator, found `,`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:7
   |
LL |     [1, 3)
   |       ^ expected one of `.`, `?`, `]`, or an operator

error: aborting due to 2 previous errors

